# celex_kinect

./: .gitignore  README.md
event_traj_detector/: CMakeLists.txt  package.xml
event_traj_detector/include/event_traj_detector/: compensation.h  depth_est.h  ekf_filter.hpp  eventor.h  obj_detector.h  tracker.h
event_traj_detector/launch/: detector.launch
event_traj_detector/launch/config/: detector_default.yaml
event_traj_detector/src/: compensation.cpp  depth_est.cpp  detector_node.cpp  eventor.cpp  obj_detector.cpp  tracker.cpp
script/: OpenCVTest.py  draw_block.py  event_time_statis.py  kalman.py  opencv_test.cpp  singleTest  singleTest.cpp
script/calib_test/: draw_all_corner.py
script/opencvTest/: CMakeLists.txt  opencv_test.cpp
script/rosscript/: CMakeLists.txt  package.xml
script/rosscript/src/: celex_sub.cpp  draw2d.cpp
